# fabTeste

./: README.md
fab_zero/: app.py  pyproject.toml
fab_zero/htmlcov/: z_c6e53e725010c008___init___py.html  z_c6e53e725010c008_app_py.html
fab_zero/tests/: test_app.py
htmlcov/: class_index.html  function_index.html  index.html  status.json
