[tool.poetry]
name = "fab-zero"
version = "0.1.0"
description = ""
authors = ["CardosoDaniel <145879116+D4N13LCS@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = {extras = ["standard"], version = "^0.114.0"}
ignr = "^2.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations'] 

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini__options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev fab_zero/app.py'
pre_test = 'task lint'
test = 'pytest --cov=fab_zero -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"